--- a/src/components/meta.html
+++ b/src/components/meta.html
@@ -5,7 +5,5 @@
 <meta name="keywords" content="gulp-blog">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
 <link rel="stylesheet" href="/assets/css/style.css">
-<link href=/favicon16.ico mce_href=/img/favicon.ico rel=bookmark type=image/x-icon>
-<link href=/favicon16.ico mce_href=/img/favicon.ico rel=icon type=image/x-icon>
-<link href=/favicon16.ico mce_href=/favicon.ico rel="shortcut icon" type=image/x-icon>
+<link rel="shortcut icon" mce_href="favicon.png" href="favicon.png" type="image/x-icon">
 <script src="/assets/libs/require.js"></script>
