dev模式下的动态编译模板改用gulp-html-import方式，放弃用gulp-file-include可实现子模板修改动态响应，之前不可以

--- a/src/views/sign/index.html
+++ b/src/views/sign/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    @@include("../../components/meta.html",{"title":"登录"})
+    <!-- @@include("../../components/meta.html",{"title":"登录"}) -->
     <link rel="stylesheet" href="/views/sign/css/main-index.css">
     <link rel="stylesheet" href="/views/sign/css/index.css">
 </head>
