--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,3 +7,27 @@
     overflow-x: auto;
     overflow-y: hidden;
 }
+
+.flex {
+    display: flex;
+}
+.flex-col {
+    display: flex;
+    flex-direction: column;
+}
+.flex-row-center {
+    justify-content: center;
+}
+.flex-col-center {
+    align-items: center;
+}
+.flex-1 {
+    flex: 1;
+}
+.flex-2 {
+    flex: 2;
+}
+
+.df {
+    color: red;
+}
