--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,14 +1,13 @@
 
 <div class="w-center ui-pt-20 ui-pb-20">
-    <div class="ui-d-ib" >
+    <div class="ui-d-ib df" >
         吃鸡俱乐部
     </div>
+    <div class="df">sdfasdf</div>
     <div class="ui-d-ib">
-        <a @@if (context.page === 'home'){class="active"} href="/">首页</a>
-        <a @@if (context.page === 'news'){class="active"} href="/news">新闻</a>
-        <a >搜索</a>
+        <a >搜索df</a>
         <a >关于</a>
         <a >留言</a>
-        <a href="/sign">登录</a>
+        <a href="/sign">登录不了</a>
     </div>
 </div>
