--- a/src/components/meta.html
+++ b/src/components/meta.html
@@ -1,6 +1,6 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title>@@title</title>
+<title></title>
 <meta name="description" content="gulp-blog">
 <meta name="keywords" content="gulp-blog">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
