favicon.png/meta.html

--- a/src/components/meta.html
+++ b/src/components/meta.html
@@ -1,9 +1,13 @@
 <meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<title></title>
-<meta name="description" content="gulp-blog">
-<meta name="keywords" content="gulp-blog">
-<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-<link rel="stylesheet" href="/assets/css/style.css">
-<link rel="shortcut icon" mce_href="favicon.png" href="favicon.png" type="image/x-icon">
-<script src="/assets/libs/require.js"></script>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit">
+    <meta name="description" content="gulp-static-resources">
+    <meta name="keywords" content="gulp-static-resources">
+    <!-- <meta name="revisit-after" content="7 days" > 通知搜索引擎多少天访问一次 -->
+    <!-- <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no"> -->
+    <title>meta</title>
+    <link rel="icon" href="data:image/ico;base64,aWNv">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/favicon.png" type="image/png">
+    <link rel="stylesheet" href="/assets/css/style.css">
+    <script src="/assets/libs/require.js"></script>
