--- a/src/assets/css/public/setting.css
+++ b/src/assets/css/public/setting.css
@@ -8,4 +8,4 @@ $textColors: f60, 333, 666, 999, fff;
 $textFonts: 12, 13, 14, 15, 16, 17, 18, 19, 20, 24;
 
 /* 公共背景颜色 */
-$backgroundColors: fff, ccc;
+$backgroundColors: fff, ccc, ddd;
