--- a/src/components/header.html
+++ b/src/components/header.html
@@ -1,13 +1,9 @@
-
-<div class="w-center ui-pt-20 ui-pb-20">
-    <div class="ui-d-ib df" >
-        吃鸡俱乐部
-    </div>
-    <div class="df">sdfasdf</div>
-    <div class="ui-d-ib">
-        <a >搜索df</a>
-        <a >关于</a>
-        <a >留言</a>
-        <a href="/sign">登录不了</a>
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <div class="span4">阿斯蒂芬</div>
+            <div class="span4">规划风格</div>
+            <div class="span4">洪涛股份</div>
+        </div>
     </div>
 </div>
