引用gulp-include-html

--- a/src/components/header.html
+++ b/src/components/header.html
@@ -3,11 +3,10 @@
         <div class="row">
             <div class="span4">阿斯蒂芬</div>
             <div class="span4">规划风格</div>
-            <div class="span4">洪涛股份</div>
+            <div class="span4">洪涛股份dsf</div>
+            <div class="span4"><%= contents %></div>
+            <div class="span4"><%= title %>我不是传递进来的</div>
+            <div class="span4">asd地方</div>
         </div>
     </div>
 </div>
-<script>
-    var loc = window.location.href;
-    console.log(loc);
-</script>
